@@ -13,7 +13,7 @@
   <th class='data'>&nbsp;</th>
   <th class='data[% IF type == 'apply'        %] confSelected[% END %]'>
     <a href="conf.cgi?sub=objects&amp;apply=yes">Apply</a>
-    [% IF needs_reload || needs_commit %]
+    [% IF last_changed || needs_commit %]
     <a href="conf.cgi?sub=objects&amp;apply=yes"><img src='[% url_prefix %]thruk/themes/[% theme %]/images/error.png' alt='Config has changed and needs to be applied' title='Config has changed and needs to be applied' width="16" height="16" style="vertical-align: text-bottom"></a>
     [% END %]
     </th>
