@@ -60,7 +60,7 @@
         3. Check your configuration changes
       </td>
       <td class='dataVar'>
-        [% IF needs_reload %]
+        [% IF last_changed %]
         <img src='[% url_prefix %]thruk/themes/[% theme %]/images/error.png' alt='Core needs to be reloaded' title='Core needs to be reloaded' width="16" height="16" style="vertical-align: text-bottom">
         [% END %]
       </td>
@@ -79,7 +79,7 @@
         4. Reload your monitoring core
       </td>
       <td class='dataVar'>
-        [% IF needs_reload %]
+        [% IF last_changed %]
         <img src='[% url_prefix %]thruk/themes/[% theme %]/images/error.png' alt='Core needs to be reloaded' title='Core needs to be reloaded' width="16" height="16" style="vertical-align: text-bottom">
         [% END %]
       </td>
